--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "npm run dev",
     "server": "nodemon server/index.js",
     "client": "npm run dev --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "install-all": "npm install --prefix client && npm install --prefix server"
   },
   "keywords": [],
   "author": "",
